--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/koke_/Desktop/mysql-connector-java-5.1.15.jar"/>
+	<classpathentry kind="lib" path="/datos/usuarios/alumnos/alvaro.monterocarmena/Escritorio/mysql-connector-java-5.1.15-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
